Fixed button example on small devices

--- a/_sass/_design_system.scss
+++ b/_sass/_design_system.scss
@@ -4511,6 +4511,14 @@
 		.primary-dark-button {
 			.primary-container {
 				display: flex;
+
+				.button-wrapper {
+					margin: 8px 16px;
+				}
+
+				@media(max-width: 768px) {
+					flex-direction: column;
+				}
 			}
 
 			.cta-button {
@@ -4615,7 +4623,11 @@
 				display: flex;
 
 				.button-wrapper {
-					margin: 0 16px;
+					margin: 8px 16px;
+				}
+
+				@media(max-width: 768px) {
+					flex-direction: column;
 				}
 			}
 
@@ -5551,6 +5563,7 @@
 				border-top: 4px solid $green-positive-dark;
 				width: 50%;
 				padding: 16px 32px 32px 32px;
+
 				h3 {
 					padding-bottom: 32px;
 				}
